[package]
name = "tests-integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
dashboard = []

[lints]
workspace = true

[dependencies]
api.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
auth.workspace = true
axum.workspace = true
cache.workspace = true
catalog.workspace = true
chrono.workspace = true
clap.workspace = true
client = { workspace = true, features = ["testing"] }
cmd.workspace = true
common-base.workspace = true
common-catalog.workspace = true
common-config.workspace = true
common-error.workspace = true
common-event-recorder.workspace = true
common-grpc.workspace = true
common-meta = { workspace = true, features = ["testing"] }
common-procedure.workspace = true
common-query.workspace = true
common-recordbatch.workspace = true
common-runtime.workspace = true
common-telemetry.workspace = true
common-test-util.workspace = true
common-time.workspace = true
common-wal.workspace = true
datanode = { workspace = true }
datatypes.workspace = true
dotenv.workspace = true
flate2 = "1.0"
flow.workspace = true
frontend = { workspace = true, features = ["testing"] }
futures.workspace = true
futures-util.workspace = true
hyper-util = { workspace = true, features = ["tokio"] }
log-query = { workspace = true }
loki-proto.workspace = true
meta-client.workspace = true
meta-srv = { workspace = true, features = ["mock"] }
moka.workspace = true
mysql_async = { version = "0.35", default-features = false, features = [
    "time",
    "default-rustls-ring",
] }
object-store.workspace = true
operator = { workspace = true, features = ["testing"] }
prost.workspace = true
query.workspace = true
rand.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
sea-query.workspace = true
serde_json.workspace = true
servers = { workspace = true, features = ["testing"] }
session.workspace = true
similar-asserts.workspace = true
snafu.workspace = true
sql.workspace = true
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
    "chrono",
] }
substrait.workspace = true
table.workspace = true
tempfile.workspace = true
time = "0.3"
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tower.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
datafusion.workspace = true
datafusion-expr.workspace = true
hex.workspace = true
http.workspace = true
itertools.workspace = true
jsonb.workspace = true
opentelemetry-proto.workspace = true
otel-arrow-rust.workspace = true
partition.workspace = true
paste.workspace = true
pipeline.workspace = true
prost.workspace = true
rand.workspace = true
session = { workspace = true, features = ["testing"] }
store-api.workspace = true
tokio-postgres = { workspace = true }
url = "2.3"
urlencoding = "2.1"
yaml-rust = "0.4"
