[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-base = { workspace = true }
common-error = { workspace = true }
common-macro = { workspace = true }
common-time = { workspace = true }
datatypes = { workspace = true }
greptime-proto.workspace = true
prost.workspace = true
snafu = { version = "0.7", features = ["backtraces"] }
tonic.workspace = true

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
paste = "1.0"
