[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-base.workspace = true
common-decimal.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-time.workspace = true
datatypes.workspace = true
greptime-proto.workspace = true
paste = "1.0"
prost.workspace = true
snafu.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
paste = "1.0"
