[package]
name = "cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
catalog.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-meta.workspace = true
moka.workspace = true
partition.workspace = true
snafu.workspace = true
