[package]
name = "dataflow"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-query.workspace = true
common-telemetry.workspace = true
common-time.workspace = true
datatypes.workspace = true
servers.workspace = true
session.workspace = true

bimap = "0.6.3"
hydroflow = "0.5.0"
itertools.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tonic.workspace = true
