[package]
name = "datatypes"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test = []

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
arrow.workspace = true
common-base.workspace = true
common-decimal.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-telemetry.workspace = true
common-time.workspace = true
datafusion-common.workspace = true
enum_dispatch = "0.3"
num = "0.4"
num-traits = "0.2"
ordered-float = { version = "3.0", features = ["serde"] }
paste = "1.0"
rust_decimal = "1.32.0"
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
