[package]
name = "datatypes"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test = []

[lints]
workspace = true

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
common-base.workspace = true
common-decimal.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-telemetry.workspace = true
common-time.workspace = true
datafusion-common.workspace = true
enum_dispatch = "0.3"
jsonb.workspace = true
num = "0.4"
num-traits = "0.2"
ordered-float.workspace = true
paste.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sqlparser.workspace = true
sqlparser_derive = "0.1"
